--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#1f1f1f">
     <link rel="stylesheet" href="assets/style.css">
     <title>The Movies Project</title>
 </head>
 
-<body>
+<body id="body">
 
     <header>
         <div class="brand">
-            <h2>Movie</h2>
+            <h2>The Movie Project</h2>
         </div>
 
         <div class="tabs">
@@ -31,6 +32,10 @@
     <main id="main">
            
     </main>
+
+    <footer>
+        built by &nbsp; <a href="https://adityamali.ml">Aditya Mali</a> &nbsp; using HTML, CSS & JS.
+    </footer>
 
     <script src="assets/script.js"></script>
 </body>
