search box is now working

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
     </header>
 
     <main id="main">
-           
+        <h3>Popular today</h3>
+        <!-- <div class="xscroll">
+            <div id="flex">
+
+            </div>
+        </div>  -->
     </main>
 
     <footer>
